vlib/v/parser/tests/invalid_using_atomic.vv
fn main() {
	if atomic true {
		println(true)
	}
}
